Remove custom nav active color to fix dark mode issues

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -11,8 +11,6 @@ $primary: #6d29e9;
 @import "./../node_modules/bootstrap/scss/variables";
 @import "./../node_modules/bootstrap/scss/variables-dark";
 
-$nav-underline-link-active-color: $primary;
-
 @import "./../node_modules/bootstrap/scss/maps";
 @import "./../node_modules/bootstrap/scss/mixins";
 @import "./../node_modules/bootstrap/scss/utilities";
